--- a/dashboard.html
+++ b/dashboard.html
@@ -93,7 +93,7 @@
                         <ul class="unstyled-list">
                             <li><a href="" class="fg-white fg-hover-yellow"><span class="mif-profile"></span> Perfil</a></li>
                             <li><a href="" class="fg-white fg-hover-yellow"><span class="mif-security"></span> Securidad</a></li>
-                            <li><a href="" class="fg-white fg-hover-yellow"><span class="mif-exit"></span> Salir</a></li>
+                            <li><a href="index.html" class="fg-white fg-hover-yellow"><span class="mif-exit"></span> Salir</a></li>
                         </ul>
                     </div>
                 </div>
@@ -108,35 +108,30 @@
                                 <a href="#">
                                     <span class="mif-list icon"></span>
                                     <span class="title">Mostrar todo</span>
-                                    <span class="counter">0</span>
                                 </a>
                             </li>
                             <li>
                                 <a href="#">
                                     <span class="mif-key icon"></span>
                                     <span class="title">Agregar</span>
-                                    <span class="counter">0</span>
                                 </a>
                             </li>
                             <li>
                                 <a href="#">
                                     <span class="mif-search icon"></span>
                                     <span class="title">Modificar</span>
-                                    <span class="counter">0</span>
                                 </a>
                             </li>
                             <li>
                                 <a href="#">
                                     <span class="mif-cogs icon"></span>
                                     <span class="title">Cuenta</span>
-                                    <span class="counter">0</span>
                                 </a>
                             </li>
                             <li>
                                 <a href="#">
                                     <span class="mif-info icon"></span>
                                     <span class="title">Ayuda</span>
-                                    <span class="counter">0</span>
                                 </a>
                             </li>
                         </ul>
