--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
         <meta name="description" content="Sitio web persoanl del bloggero M2">
-        <meta name="keywords" content="HTML, CSS, JS, JavaScript,m2, linuxitos, fedora, web development">
+        <meta name="keywords" content="HTML, CSS, JS, JavaScript,m2, linuxitos, fedora, save password, cloud passpwrod, admin password, save, password">
         <meta name="author" content="Jesús Fernando Merino Merino and LiNuXiToS">
 
         <link href="css/metro.css" rel="stylesheet">
@@ -92,7 +92,8 @@
                         <a class="dropdown-toggle fg-white"><span class="mif-enter"></span> Iniciar Sesión</a>
                         <div class="app-bar-drop-container place-right" data-role="dropdown" data-no-close="true">
                             <div class="padding20">
-                                <form action="validar.php" method="post" data-role="validator" data-hint-mode="hint" data-hint-easing="easeOutBounce">
+                                <!-- form action="validar.php" method="post" data-role="validator" data-hint-mode="hint" data-hint-easing="easeOutBounce" -->
+                                <form action="dashboard.html" method="post" data-role="validator" data-hint-mode="hint" data-hint-easing="easeOutBounce">
                                     <h4 class="text-light">Iniciar sesión...</h4>
                                     <div class="input-control text">
                                         <span class="mif-user prepend-icon"></span>
