--- a/dashboard.html
+++ b/dashboard.html
@@ -81,7 +81,7 @@
         <div class="container page-content">
             <!--Sección del menú cuando el usuario se haya logeado-->
             <div class="app-bar fixed-top darcula" data-role="appbar">
-                <a href="index.html" class="app-bar-element branding selected"><span class="mif-home"> SaveMyPassword </span></a>
+                <a href="dashboard.html" class="app-bar-element branding selected"><span class="mif-home"> SaveMyPassword </span></a>
                 <span class="app-bar-divider"></span>
                 <ul class="app-bar-menu">
                 </ul>
@@ -148,13 +148,12 @@
                         <table class="dataTable border bordered" data-role="datatable">
                             <thead>
                                 <tr>
-                                    <td style="width: 20px">
-                                    </td>
+                                    <td style="width: 20px"></td>
                                     <td class="sortable-column sort-asc" style="width: 100px">ID</td>
                                     <td class="sortable-column">Nombre usuario</td>
                                     <td class="sortable-column">Contraseña</td>
-                                    <td class="sortable-column" style="width: 20px">Status</td>
-                                    <td style="width: 20px">Switch</td>
+                                    <td class="sortable-column" style="width: 20px">Ver</td>
+                                    <td style="width: 20px">Descripción</td>
                                 </tr>
                             </thead>
                             <tbody>
@@ -165,142 +164,16 @@
                                             <span class="check"></span>
                                         </label>
                                     </td>
-                                    <td>1</td>
-                                    <td>Machine number 1</td>
-                                    <td><a href="http://virtuals.com/machines/123890723212">link</a></td>
-                                    <td class="align-center"><span class="mif-checkmark fg-green"></span></td>
-                                    <td>
+                                    <td class="align-center"><a href="">1</a></td>
+                                    <td>hackme@please.com</td>
+                                    <td>holamundo1234</td>
+                                    <td class="align-center">
                                         <label class="switch-original">
                                             <input type="checkbox" checked>
                                             <span class="check"></span>
                                         </label>
                                     </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <label class="input-control checkbox small-check no-margin">
-                                            <input type="checkbox">
-                                            <span class="check"></span>
-                                        </label>
-                                    </td>
-                                    <td>2</td>
-                                    <td>Machine number 2</td>
-                                    <td><a href="http://virtuals.com/machines/123890723212">link</a></td>
-                                    <td class="align-center"><span class="mif-stop fg-red"></span></td>
-                                    <td>
-                                        <label class="switch-original">
-                                            <input type="checkbox">
-                                            <span class="check"></span>
-                                        </label>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <label class="input-control checkbox small-check no-margin">
-                                            <input type="checkbox">
-                                            <span class="check"></span>
-                                        </label>
-                                    </td>
-                                    <td>3</td>
-                                    <td>Machine number 2</td>
-                                    <td><a href="http://virtuals.com/machines/123890723212">link</a></td>
-                                    <td class="align-center"><span class="mif-stop fg-red"></span></td>
-                                    <td>
-                                        <label class="switch-original">
-                                            <input type="checkbox">
-                                            <span class="check"></span>
-                                        </label>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <label class="input-control checkbox small-check no-margin">
-                                            <input type="checkbox">
-                                            <span class="check"></span>
-                                        </label>
-                                    </td>
-                                    <td>4</td>
-                                    <td>Machine number 2</td>
-                                    <td><a href="http://virtuals.com/machines/123890723212">link</a></td>
-                                    <td class="align-center"><span class="mif-stop fg-red"></span></td>
-                                    <td>
-                                        <label class="switch-original">
-                                            <input type="checkbox">
-                                            <span class="check"></span>
-                                        </label>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <label class="input-control checkbox small-check no-margin">
-                                            <input type="checkbox">
-                                            <span class="check"></span>
-                                        </label>
-                                    </td>
-                                    <td>5</td>
-                                    <td>Machine number 2</td>
-                                    <td><a href="http://virtuals.com/machines/123890723212">link</a></td>
-                                    <td class="align-center"><span class="mif-stop fg-red"></span></td>
-                                    <td>
-                                        <label class="switch-original">
-                                            <input type="checkbox">
-                                            <span class="check"></span>
-                                        </label>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <label class="input-control checkbox small-check no-margin">
-                                            <input type="checkbox">
-                                            <span class="check"></span>
-                                        </label>
-                                    </td>
-                                    <td>6</td>
-                                    <td>Machine number 2</td>
-                                    <td><a href="http://virtuals.com/machines/123890723212">link</a></td>
-                                    <td class="align-center"><span class="mif-stop fg-red"></span></td>
-                                    <td>
-                                        <label class="switch-original">
-                                            <input type="checkbox">
-                                            <span class="check"></span>
-                                        </label>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <label class="input-control checkbox small-check no-margin">
-                                            <input type="checkbox">
-                                            <span class="check"></span>
-                                        </label>
-                                    </td>
-                                    <td>7</td>
-                                    <td>Machine number 2</td>
-                                    <td><a href="http://virtuals.com/machines/123890723212">link</a></td>
-                                    <td class="align-center"><span class="mif-stop fg-red"></span></td>
-                                    <td>
-                                        <label class="switch-original">
-                                            <input type="checkbox">
-                                            <span class="check"></span>
-                                        </label>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <label class="input-control checkbox small-check no-margin">
-                                            <input type="checkbox">
-                                            <span class="check"></span>
-                                        </label>
-                                    </td>
-                                    <td>8</td>
-                                    <td>Machine number 2</td>
-                                    <td><a href="http://virtuals.com/machines/123890723212">link</a></td>
-                                    <td class="align-center"><span class="mif-stop fg-red"></span></td>
-                                    <td>
-                                        <label class="switch-original">
-                                            <input type="checkbox">
-                                            <span class="check"></span>
-                                        </label>
-                                    </td>
+                                    <td class="align-left">Usuario del sitio hackme.please.com accedido hace un mes</td>
                                 </tr>
                             </tbody>
                         </table>
