--- a/userpages/acount.html
+++ b/userpages/acount.html
@@ -7,24 +7,24 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width">
         <title>M2 - Save My Password</title>
-        <link REL="Shortcut Icon" HREF="img/icono.png">
+        <link REL="Shortcut Icon" HREF="../img/icono.png">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
         <meta name="description" content="Sitio web persoanl del bloggero M2">
         <meta name="keywords" content="HTML, CSS, JS, JavaScript,m2, linuxitos, fedora, web development">
         <meta name="author" content="Jesús Fernando Merino Merino and LiNuXiToS">
 
-        <link href="css/metro.css" rel="stylesheet">
-        <link href="css/metro-icons.css" rel="stylesheet">
+        <link href="../css/metro.css" rel="stylesheet">
+        <link href="../css/metro-icons.css" rel="stylesheet">
         <!-- link href="css/docs.css" rel="stylesheet" -->
-        <link href="css/m2main.css" rel="stylesheet">
+        <link href="../css/m2main.css" rel="stylesheet">
 
-        <script src="js/jquery-2.1.3.min.js"></script>
-        <script src="js/metro.js"></script>
-        <script src="js/docs.js"></script>
-        <script src="js/prettify/run_prettify.js"></script>
-        <script src="js/ga.js"></script>
-        <script src="js/jquery.dataTables.min.js"></script>
+        <script src="../js/jquery-2.1.3.min.js"></script>
+        <script src="../js/metro.js"></script>
+        <script src="../js/docs.js"></script>
+        <script src="../js/prettify/run_prettify.js"></script>
+        <script src="../js/ga.js"></script>
+        <script src="../js/jquery.dataTables.min.js"></script>
 
         <style>
             .icon-list li {
@@ -81,7 +81,7 @@
         <div class="container page-content">
             <!--Sección del menú cuando el usuario se haya logeado-->
             <div class="app-bar fixed-top darcula" data-role="appbar">
-                <a href="dashboard.html" class="app-bar-element branding selected"><span class="mif-home"> SaveMyPassword </span></a>
+                <a href="../dashboard.html" class="app-bar-element branding selected"><span class="mif-home"> SaveMyPassword </span></a>
                 <span class="app-bar-divider"></span>
                 <ul class="app-bar-menu">
                 </ul>
@@ -93,7 +93,7 @@
                         <ul class="unstyled-list">
                             <li><a href="" class="fg-white fg-hover-yellow"><span class="mif-profile"></span> Perfil</a></li>
                             <li><a href="" class="fg-white fg-hover-yellow"><span class="mif-security"></span> Securidad</a></li>
-                            <li><a href="index.html" class="fg-white fg-hover-yellow"><span class="mif-exit"></span> Salir</a></li>
+                            <li><a href="../index.html" class="fg-white fg-hover-yellow"><span class="mif-exit"></span> Salir</a></li>
                         </ul>
                     </div>
                 </div>
@@ -104,32 +104,32 @@
                 <div class="row" style="height: 100%">
                     <div class="cell size-x200" id="cell-sidebar" style="background-color: #71b1d1; height: 100%">
                         <ul class="sidebar">
-                            <li class="active">
-                                <a href="#">
+                            <li>
+                                <a href="../dashboard.html">
                                     <span class="mif-list icon"></span>
                                     <span class="title">Mostrar todo</span>
                                 </a>
                             </li>
                             <li>
-                                <a href="userpages/addpasswd.html">
+                                <a href="addpasswd.html">
                                     <span class="mif-key icon"></span>
                                     <span class="title">Agregar</span>
                                 </a>
                             </li>
                             <li>
-                                <a href="userpages/modifypasswd.html">
+                                <a href="modifypasswd.html">
                                     <span class="mif-search icon"></span>
                                     <span class="title">Modificar</span>
                                 </a>
                             </li>
-                            <li>
-                                <a href="userpages/acount.html">
+                            <li class="active">
+                                <a href="acount.html">
                                     <span class="mif-cogs icon"></span>
                                     <span class="title">Cuenta</span>
                                 </a>
                             </li>
                             <li>
-                                <a href="userpages/help.html">
+                                <a href="help.html">
                                     <span class="mif-info icon"></span>
                                     <span class="title">Ayuda</span>
                                 </a>
@@ -137,7 +137,7 @@
                         </ul>
                     </div>
                     <div class="cell auto-size padding20 bg-white">
-                        <h1 class="text-light">Contraseñas almacenadas <span class="mif-list place-right"></span></h1>
+                        <h1 class="text-light"> Configuración de la cuenta <span class="mif-cogs place-right"></span></h1>
                         <hr class="thin bg-grayLighter">
                         <button class="button primary" onclick="pushMessage('info')"><span class="mif-plus"></span> Agregar nueva...</button>
                         <button class="button success" onclick="pushMessage('success')"><span class="mif-play"></span> Eliminar</button>
