--- a/userpages/help.html
+++ b/userpages/help.html
@@ -139,44 +139,44 @@
                     <div class="cell auto-size padding20 bg-white">
                         <h1 class="text-light"> Ayuda <span class="mif-info place-right"></span></h1>
                         <hr class="thin bg-grayLighter">
-                        <button class="button primary" onclick="pushMessage('info')"><span class="mif-plus"></span> Agregar nueva...</button>
-                        <button class="button success" onclick="pushMessage('success')"><span class="mif-play"></span> Eliminar</button>
-                        <button class="button warning" onclick="pushMessage('warning')"><span class="mif-loop2"></span> Modificar</button>
-                        <button class="button alert" onclick="pushMessage('alert')">Eliminar todo</button>
-                        <hr class="thin bg-grayLighter">
-
-                        <table class="dataTable border bordered" data-role="datatable">
-                            <thead>
-                                <tr>
-                                    <td style="width: 20px"></td>
-                                    <td class="sortable-column sort-asc" style="width: 100px">ID</td>
-                                    <td class="sortable-column">Nombre usuario</td>
-                                    <td class="sortable-column">Contraseña</td>
-                                    <td class="sortable-column" style="width: 20px">Ver</td>
-                                    <td style="width: 20px">Descripción</td>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td>
-                                        <label class="input-control checkbox small-check no-margin">
-                                            <input type="checkbox">
-                                            <span class="check"></span>
-                                        </label>
-                                    </td>
-                                    <td class="align-center"><a href="">1</a></td>
-                                    <td>hackme@please.com</td>
-                                    <td>holamundo1234</td>
-                                    <td class="align-center">
-                                        <label class="switch-original">
-                                            <input type="checkbox" checked>
-                                            <span class="check"></span>
-                                        </label>
-                                    </td>
-                                    <td class="align-left">Usuario del sitio hackme.please.com accedido hace un mes</td>
-                                </tr>
-                            </tbody>
-                        </table>
+                        <div class="grid">
+                <div class="row ">
+                    <div class="cell colspan12">
+                        <ul class="step-list">
+                            <li>
+                                <h3 class="no-margin-top"> Agregar nuevas cuentas de usuarios </h3>
+                                <hr class="bg-red" />
+                                <div>
+                                    Add a custom domain so that your users can sign in with familiar user names. For example, if your organization owns ‘contoso.com’, users can sign in Azure AD with user names such as ‘joe@contoso.com’.
+                                </div>
+                            </li>
+                            <li>
+                                <h3 class="no-margin-top"> Modificar cuentas y contraseñas </h3>
+                                <hr class="bg-green" />
+                                <div>
+                                    Use the same user accounts and groups in the cloud that you already use on premises.
+                                    <br />
+                                    <a href="">Set up directory integration</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="">Download the preview of Azure AD Content</a>
+                                </div>
+                            </li>
+                            <li>
+                                <h3 class="no-margin-top"> Eliminar cuentas y contraseñas </h3>
+                                <hr  class="bg-blue"/>
+                                <div>
+                                    Improve access management experiences for end users and administrators, including self service password reset, group management, sign in customization, and reporting.
+                                </div>
+                            </li>
+                            <li>
+                                <h3 class="no-margin-top"> Eliminar tu cuenta de SaveMyPassword </h3>
+                                <hr  class="bg-blue"/>
+                                <div>
+                                    Improve access management experiences for end users and administrators, including self service password reset, group management, sign in customization, and reporting.
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
                     </div>
                 </div>
             </div>
