--- a/userpages/addpasswd.html
+++ b/userpages/addpasswd.html
@@ -170,10 +170,8 @@
                                         </div>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="margin10 place-right">
                                 <input type="reset" name="reset" value="Limpiar" class="button bg-gray button large primary">
-                                <input type="submit" name="Submit" value="Registrarse" class="button bg-pass button large primary">
+                                <input type="submit" name="Submit" value="Guardar" class="button bg-pass button large primary">
                             </div>
                         </form>
                     </div>
