--- a/userpages/help.html
+++ b/userpages/help.html
@@ -147,7 +147,7 @@
                                 <h3 class="no-margin-top"> Agregar nuevas cuentas de usuarios </h3>
                                 <hr class="bg-red" />
                                 <div>
-                                    Add a custom domain so that your users can sign in with familiar user names. For example, if your organization owns ‘contoso.com’, users can sign in Azure AD with user names such as ‘joe@contoso.com’.
+                                    Para agregar cuentas y contrasseñas ir al menú lateral izquiero y seleccionar la opción "Agregar". Una vez estando ahí, rellenar los campos vacíos y clic en el botón guardar. Para ver la contraseña recien agregada, ir a la opción de Mostrar todo para ver la contraseña en la lista completa.
                                 </div>
                             </li>
                             <li>
