--- a/userpages/help.html
+++ b/userpages/help.html
@@ -140,43 +140,41 @@
                         <h1 class="text-light"> Ayuda <span class="mif-info place-right"></span></h1>
                         <hr class="thin bg-grayLighter">
                         <div class="grid">
-                <div class="row ">
-                    <div class="cell colspan12">
-                        <ul class="step-list">
-                            <li>
-                                <h3 class="no-margin-top"> Agregar nuevas cuentas de usuarios </h3>
-                                <hr class="bg-red" />
-                                <div>
-                                    Para agregar cuentas y contrasseñas ir al menú lateral izquiero y seleccionar la opción "Agregar". Una vez estando ahí, rellenar los campos vacíos y clic en el botón guardar. Para ver la contraseña recien agregada, ir a la opción de Mostrar todo para ver la contraseña en la lista completa.
+                            <div class="row ">
+                                <div class="cell colspan12">
+                                    <ul class="step-list">
+                                        <li>
+                                            <h3 class="no-margin-top"> Agregar nuevas cuentas de usuarios </h3>
+                                            <hr class="bg-red" />
+                                            <div>
+                                                Para agregar cuentas y contrasseñas ir al menú lateral izquiero y seleccionar la opción "Agregar". Una vez estando ahí, rellenar los campos vacíos y clic en el botón guardar. Para ver la contraseña recien agregada, ir a la opción de Mostrar todo para ver la contraseña en la lista completa.
+                                            </div>
+                                        </li>
+                                        <li>
+                                            <h3 class="no-margin-top"> Modificar cuentas y contraseñas </h3>
+                                            <hr class="bg-green" />
+                                            <div>
+                                                En la opción "Modificar" se muestra una tabla con la lista completa de todas las contraseñas y usuarios que hayas agregado. Para modificar una cuenta solo necesitas buscar y seleccionar el ID que los llevará a una página vacía donde se podrá moficar y guardar la información.
+                                            </div>
+                                        </li>
+                                        <li>
+                                            <h3 class="no-margin-top"> Eliminar cuentas y contraseñas </h3>
+                                            <hr  class="bg-blue"/>
+                                            <div>
+                                                Para eliminar una cuenta ir al menú "Mostrar Todo" buscarla en la tabla y clic en el botón eliminar que pertenece a la cuenta seleccionada.
+                                            </div>
+                                        </li>
+                                        <li>
+                                            <h3 class="no-margin-top"> Eliminar tu cuenta de SaveMyPassword </h3>
+                                            <hr  class="bg-blue"/>
+                                            <div>
+                                                Para eliminar una cuenta necesitas ir al menú de la esquina desplegable superior derecha y seleccionar la opción "Seguridad". Ahí encontrar la opción para eliminar tu cuenta.
+                                            </div>
+                                        </li>
+                                    </ul>
                                 </div>
-                            </li>
-                            <li>
-                                <h3 class="no-margin-top"> Modificar cuentas y contraseñas </h3>
-                                <hr class="bg-green" />
-                                <div>
-                                    Use the same user accounts and groups in the cloud that you already use on premises.
-                                    <br />
-                                    <a href="">Set up directory integration</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="">Download the preview of Azure AD Content</a>
-                                </div>
-                            </li>
-                            <li>
-                                <h3 class="no-margin-top"> Eliminar cuentas y contraseñas </h3>
-                                <hr  class="bg-blue"/>
-                                <div>
-                                    Improve access management experiences for end users and administrators, including self service password reset, group management, sign in customization, and reporting.
-                                </div>
-                            </li>
-                            <li>
-                                <h3 class="no-margin-top"> Eliminar tu cuenta de SaveMyPassword </h3>
-                                <hr  class="bg-blue"/>
-                                <div>
-                                    Improve access management experiences for end users and administrators, including self service password reset, group management, sign in customization, and reporting.
-                                </div>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
