--- a/userpages/acount.html
+++ b/userpages/acount.html
@@ -212,7 +212,7 @@
                     <ul class="horizontal-menu compact">
                         <li><a target="_blanck" href="http://linuxgx.blogspot.mx/">&copy; 2015 SaveMyPassword - LiNuXiToS</a></li>
                         <li class="place-right"><a href="#"> <span class="mif-security"> Privacidad </span> </a></li>
-                        <li class="place-right"><a href="#"> <span class="mif-help"> Ayuda </span> </a></li>
+                        <li class="place-right"><a href="help.html"> <span class="mif-help"> Ayuda </span> </a></li>
                     </ul>
                 </div>
             </div>
