--- a/privacity.html
+++ b/privacity.html
@@ -139,44 +139,18 @@
                     <div class="cell auto-size padding20 bg-white">
                         <h1 class="text-light"> Privacidad <span class="mif-security place-right"></span></h1>
                         <hr class="thin bg-grayLighter">
-                        <button class="button primary" onclick="pushMessage('info')"><span class="mif-plus"></span> Agregar nueva...</button>
-                        <button class="button success" onclick="pushMessage('success')"><span class="mif-play"></span> Eliminar</button>
-                        <button class="button warning" onclick="pushMessage('warning')"><span class="mif-loop2"></span> Modificar</button>
-                        <button class="button alert" onclick="pushMessage('alert')">Eliminar todo</button>
-                        <hr class="thin bg-grayLighter">
-
-                        <table class="dataTable border bordered" data-role="datatable">
-                            <thead>
-                                <tr>
-                                    <td style="width: 20px"></td>
-                                    <td class="sortable-column sort-asc" style="width: 100px">ID</td>
-                                    <td class="sortable-column">Nombre usuario</td>
-                                    <td class="sortable-column">Contraseña</td>
-                                    <td class="sortable-column" style="width: 20px">Ver</td>
-                                    <td style="width: 20px">Descripción</td>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td>
-                                        <label class="input-control checkbox small-check no-margin">
-                                            <input type="checkbox">
-                                            <span class="check"></span>
-                                        </label>
-                                    </td>
-                                    <td class="align-center"><a href="">1</a></td>
-                                    <td>hackme@please.com</td>
-                                    <td>holamundo1234</td>
-                                    <td class="align-center">
-                                        <label class="switch-original">
-                                            <input type="checkbox" checked>
-                                            <span class="check"></span>
-                                        </label>
-                                    </td>
-                                    <td class="align-left">Usuario del sitio hackme.please.com accedido hace un mes</td>
-                                </tr>
-                            </tbody>
-                        </table>
+                        <div class="cell">
+                            <h5>La privacidad es una utopía cuando se trata de internet, sin embargo, es posible cuando el servicio es sin fines de lucro. SaveMyPassword en son de la privacidad te ofrece:</h5>
+                            <div class="row cells5">
+                                <ul class="numeric-list large-bullet green-bullet square-bullet">
+                                    <li>No compartir tu información con nadie, debido a que no tiene fines de lucro.</li>
+                                    <li>No usar la información como venta o distribución de ninguna forma.</li>
+                                    <li>Toda la información que compartas en este sitio está resguardada con encriptadción MD5.</li>
+                                    <li>Puedes eliminar tu cuenta de este sitio cuando quieras.</li>
+                                    <li>Cuando se elimina tu cuenta, se elimina todo lo que hayas almacenado en este sitio, de tal modo que si deseas ingresar de nuevo al sitio tendrás que registrarte de nuevo.</li>
+                                </ul>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
