--- a/privacitymain.html
+++ b/privacitymain.html
@@ -79,7 +79,7 @@
             <!--Sección del menú de la página principal sin usuarios logados-->
             <div class="app-bar fixed-top darcula">
                 <div class="ali-der-menu span12">
-                    <a class="app-bar-element branding selected"><span class="mif-home"> SaveMyPassword </span></a>
+                    <a href="index.html" class="app-bar-element branding selected"><span class="mif-home"> SaveMyPassword </span></a>
                     <span class="app-bar-divider"></span>
                     <ul class="app-bar-menu">
                     </ul>
@@ -105,11 +105,11 @@
                                         <input type="password" id="password1" name="password1" data-validate-func="minlength" data-validate-arg="1" data-validate-hint-position="top">
                                         <span class="input-state-error mif-warning"></span>
                                     </div>
+                                    
                                     <div class="form-actions">
                                         <input type="reset" name="reset" value="Limpiar" class="button bg-olive button large primary">
                                         <input type="submit" name="Submit" value="Guardar" class="button bg-green button large primary">
                                     </div>
-                                    <a href="">¿Contraseña olvidada?</a>
                                 </form>
                             </div>
                         </div>
@@ -122,18 +122,19 @@
                 <div class="grid condensed conten-descrip">
                     <div class="row cells5 ">
                         <div class="cell colspan3 bg-white">
-                            <h1 class="text-bold fg-blue"><span class="mif-cloud3"></span> Save My Password <span class="mif-cloud3"></span></h1>
+                            <h1 class="text-light fg-blue"> Privacidad <span class="mif-security place-right"></span></h1>
                             <hr class="thin bg-grayLighter">
-                            <div class="margin20 no-margin-left no-margin-right sub-header text-light fg-black">
-
-                                    SaveMyPassword es un sitio web en dónde puedes guardar tus nombres de usuario y contraseña en la nube. De tal modo que puedas acceder a ellas con una sola contraseña maestra. En este sitio puedes agregar, borrar, actualizar fácilmente todas las contraseñas y usuarios que tengas.
-
-                                    <hr class="thin bg-olive">
-
-                                    Nunca más olvides tus contraseñas, mantenlas todas en un solo lugar.
-
-                                    <br><br><br>
-                                    Para utilizar las funcionalidades de este sito web, necesitas registrarte.<br>
+                            <div class="cell">
+                                <h5>La privacidad es una utopía cuando se trata de internet, sin embargo, es posible cuando el servicio es sin fines de lucro. SaveMyPassword en son de la privacidad te ofrece:</h5>
+                                <div class="row cells5">
+                                    <ul class="numeric-list large-bullet green-bullet square-bullet">
+                                        <li>No compartir tu información con nadie, debido a que no tiene fines de lucro.</li>
+                                        <li>No usar la información como venta o distribución de ninguna forma.</li>
+                                        <li>Toda la información que compartas en este sitio está resguardada con encriptadción MD5.</li>
+                                        <li>Puedes eliminar tu cuenta de este sitio cuando quieras.</li>
+                                        <li>Cuando se elimina tu cuenta, se elimina todo lo que hayas almacenado en este sitio, de tal modo que si deseas ingresar de nuevo al sitio tendrás que registrarte de nuevo.</li>
+                                    </ul>
+                                </div>
                             </div>
                         </div>
                         <div class="cell colspan2">
@@ -183,13 +184,13 @@
 
                     <footer>
                         <div class="bottom-menu-wrapper  fixed-bottom bg-white">
-                            <div class="ali-der-menu span12">
-                                <ul class="horizontal-menu compact">
-                                    <li><a target="_blanck" href="http://linuxgx.blogspot.mx/">&copy; 2015 SaveMyPassword - LiNuXiToS</a></li>
-                                    <li class="place-right"><a href="privacitymain.html"> <span class="mif-security"> Privacidad </span> </a></li>
-                                    <li class="place-right"><a href=""> <span class="mif-help"> Ayuda </span> </a></li>
-                                </ul>
-                            </div>
+                        <div class="ali-der-menu span12">
+                            <ul class="horizontal-menu compact">
+                                <li><a target="_blanck" href="http://linuxgx.blogspot.mx/">&copy; 2015 SaveMyPassword - LiNuXiToS</a></li>
+                                <li class="place-right"><a href="#"> <span class="mif-security"> Privacidad </span> </a></li>
+                                <li class="place-right"><a href="#"> <span class="mif-help"> Ayuda </span> </a></li>
+                            </ul>
+                        </div>
                         </div>
                     </footer>
                 </div>
